@@ -2,6 +2,9 @@ $Id$
 
 2018-06-21  Christian Franke  <franke@computer.org>
 
+	os_linux.cpp: Rework handling of glob() return code.
+	Don't abort device scan on missing '/dev/discs' (#1036).
+
 	os_win32.cpp: Decode Windows 10 1803 build number.
 	Silence g++ 7.3 -Wformat-truncation warning.
 
